#060227 cs  -          Changelog created.
060509 cj  -          Added some commentation.
                      Fixed bug in pb_ai and pb_di. 3-byte input where not properly
		      aligned when byte swapping.
060725 cs -           Byte order dependency added for PRM data in profibus configurator.
070207 rk -           Adapted I/O routines to work with new driver for Softing Profiboard.
                      Incorporated driver API from Softing to work with new Softing driver.
		      Added diagnostics infomation to pwr_sClass_Pb_DP_Slave-class.
070209 cs -           Bugfix in Ext_User_Prm_Data_Len.
070219 cs -           Bugfix in ExtUserPrmDataConst.
070426 rk -           Added gsd-file si0380a7.gsd, for Siemens Diagnostic Repeater.
070430 rk -           Changed status handling of Profibus slaves so that correct
                      view of the world is given.
070518 rk -           Added io-method IoAgentSwap to keep driver initialized during warm restart.
070601 cs -           Bugfix, opening Profibus Configurator with empty gsdfile attribute caused segfault.
071008 cs -           ChanIi with name starting with Diag_ fetches value from diagnostic area.
071116 cs -           Bugfix in Profibus configurator, ExtUserPrmData for slave, default values where not set.
071116 cs -           Bugfix in Profibus configurator, additional ExtUserPrmDataConst was not handled correctly.
071205 rk -           ChanDi and ChanDo inverts value if InvertOn set on channel.
071211 rk mmi         Added supgraph mcomp_pb_dp_slave.
080115 cs -           Reading of Di, Ai and Ii can be disabled by setting ConversionOn in channel object to 0.
080229 rk -           I/O-handling routines generalized and some routines moved to rt_io_bus.c
100702 cs -           Common IO module objects for different busses.
100708 rk -           Added functionality for PROFINET IO using Softing Profinet Stack
101202 rk -           Finalized PROFINET IO functionality. Added several classes